--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-hook/window-size": "^3.1.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "react": "^18.3.1",
+    "react-click-away-listener": "^2.3.0",
     "react-dom": "^18.3.1",
-    "react-fast-marquee": "^1.6.5"
+    "react-fast-marquee": "^1.6.5",
+    "react-intersection-observer": "^9.15.1",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
