Changes 4: Phase 1 Completed `Ready for production`

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ VITE_ENQUIRY_API_LINK=
 VITE_GITTHUB_PROFILE_LINK=
 VITE_LINKEDIN_PROFILE_LINK=
 VITE_FACEBOOK_PROFILE_LINK=
+
+VITE_WHATSAPP_NUMBER=
